bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:2: error: ';' expected but '=' found.
  res:Boolean=false
             ^