bat.bool1.icyhot.IcyHot.scala.code
def icyHot(temp1:Int, temp2: Int): Boolean = {
  res:Boolean=false
  if (Math.abs(temp1-temp2)>100) {
    res=true
  }
  return true
}